[package]
name = "redis"
version = "0.13.1-alpha.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>", "Jan-Erik Rediger <janerik@fnordig.de>"]
keywords = ["redis", "database"]
description = "Redis driver for Rust."
homepage = "https://github.com/mitsuhiko/redis-rs"
repository = "https://github.com/mitsuhiko/redis-rs"
documentation = "https://docs.rs/redis"
license = "BSD-3-Clause"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
dtoa = "0.4"
itoa = "0.4.3"
percent-encoding = "2.1"
sha1 = ">= 0.2, < 0.7"
url = "2.1"
combine = "3.8.1"
bytes = "0.5"
futures = "0.3.0"
pin-project = "0.4"
async-std = { git = "https://github.com/badboy/async-std", branch = "impl-async-read-write-for-reverse" }
futures_codec = "0.3.4"

[features]
default = [ "geospatial" ]

geospatial = []

[dev-dependencies]
rand = "0.4"
net2 = "0.2"
assert_approx_eq = "1.0"
fnv = "1.0.5"
criterion = "0.3"
partial-io = { version = "0.3", features = ["quickcheck"] }
quickcheck = "0.6"
# End of dev-dependencies


[[test]]
name = "test_async"

[[bench]]
name = "bench_basic"
harness = false
